fix(ui5-shellbar): visual spec alignments

--- a/packages/fiori/src/themes/ShellBar.css
+++ b/packages/fiori/src/themes/ShellBar.css
@@ -118,7 +118,7 @@ slot[name="profile"] {
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	color: var(--sapShell_TextColor);
+	color: var(--sapShell_SubBrand_TextColor);
 }
 
 :host(:not([primary-title])) .ui5-shellbar-menu-button {
@@ -144,6 +144,7 @@ slot[name="profile"] {
 	justify-content: center;
 	height: 100%;
 	overflow: hidden;
+	margin-left: 0.25rem;
 }
 
 .ui5-shellbar-menu-button--interactive .ui5-shellbar-menu-button-arrow {
@@ -451,6 +452,11 @@ slot[name="profile"] {
 	margin-inline-start: 0.5rem;
 }
 
+.ui5-shellbar-overflow-container-right-child > :first-child,
+.ui5-shellbar-search-field:first-child + .ui5-shellbar-button {
+	margin-inline-start: 0;
+}
+
 .ui5-shellbar-with-full-searchfield .ui5-shellbar-overflow-container-additional-content {
 	max-width: 0px;
 }
@@ -503,6 +509,7 @@ slot[name="profile"] {
 ::slotted([slot="logo"]) {
 	max-height: 2rem;
 	pointer-events: none;
+	padding: 0 0.25rem;
 }
 
 .ui5-shellbar-co-pilot-placeholder {
